[gd_scene load_steps=14 format=3 uid="uid://cejt44jlc47d"]

[ext_resource type="PackedScene" uid="uid://k5no8rbevxm5" path="res://scenes/game_elements/platforms/4.tscn" id="1_e2v8h"]
[ext_resource type="Script" path="res://scenes/level/main_game.gd" id="1_pba15"]
[ext_resource type="Texture2D" uid="uid://bxk4vf7scuu42" path="res://Assets/Images/Others/finishLine.png" id="3_i1v6j"]
[ext_resource type="PackedScene" uid="uid://d3q3o25dcrisy" path="res://scenes/game_elements/beam/beam.tscn" id="4_koegk"]
[ext_resource type="FontFile" uid="uid://ciu34ps6m37b6" path="res://Assets/Fonts/upheavtt.ttf" id="5_3odew"]
[ext_resource type="Texture2D" uid="uid://ry5pgmaujf8q" path="res://Assets/Images/Buttons/GUI.png" id="6_jd1al"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu1am"]
size = Vector2(284.878, 33.4471)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lmhx"]
size = Vector2(4558, 200)

[sub_resource type="Theme" id="Theme_yeqvi"]
default_font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywlty"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2u7ot"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 113, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0mtx"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5h6t"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 81, 46, 14)

[node name="MainGame" type="Node2D"]
script = ExtResource("1_pba15")

[node name="4" parent="." instance=ExtResource("1_e2v8h")]
position = Vector2(188, 707)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(541, 500)
rotation = 3.14159
scale = Vector2(97.6653, 61.0896)
zoom = Vector2(0.7, 0.7)

[node name="checkPoint1" type="Sprite2D" parent="."]
position = Vector2(543.5, 320)
scale = Vector2(4.1, 0.956735)
texture = ExtResource("3_i1v6j")

[node name="checkpoint1" type="Area2D" parent="checkPoint1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkPoint1/checkpoint1"]
position = Vector2(-1.82924, 0.0273438)
shape = SubResource("RectangleShape2D_wu1am")

[node name="checkPoint2" type="Sprite2D" parent="."]
position = Vector2(543.5, -180)
scale = Vector2(4.1, 0.956735)
texture = ExtResource("3_i1v6j")

[node name="checkpoint2" type="Area2D" parent="checkPoint2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkPoint2/checkpoint2"]
position = Vector2(-1.82924, 0.0273438)
shape = SubResource("RectangleShape2D_wu1am")

[node name="checkPoint3" type="Sprite2D" parent="."]
position = Vector2(543.5, -700)
scale = Vector2(4.1, 3.88957)
texture = ExtResource("3_i1v6j")

[node name="checkpointFinal" type="Area2D" parent="checkPoint3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkPoint3/checkpointFinal"]
position = Vector2(-1.82924, 0.0273438)
shape = SubResource("RectangleShape2D_wu1am")

[node name="destroy" type="Area2D" parent="."]
position = Vector2(-1800, 984)

[node name="destroy" type="CollisionShape2D" parent="destroy"]
position = Vector2(2269, 90)
shape = SubResource("RectangleShape2D_4lmhx")

[node name="pieces" type="Node2D" parent="."]

[node name="isFalling" type="Node2D" parent="pieces"]

[node name="hasFallen" type="Node2D" parent="pieces"]

[node name="Beam" parent="." instance=ExtResource("4_koegk")]

[node name="nextPiecePreview" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -0.00012207
offset_right = 39.9999
offset_bottom = 40.0

[node name="resetButton" type="Button" parent="."]
offset_left = 1011.0
offset_top = 651.0
offset_right = 1217.0
offset_bottom = 703.0
focus_mode = 0
theme = SubResource("Theme_yeqvi")
theme_override_fonts/font = ExtResource("5_3odew")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ywlty")
theme_override_styles/hover = SubResource("StyleBoxTexture_2u7ot")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0mtx")
theme_override_styles/normal = SubResource("StyleBoxTexture_w5h6t")
text = "Recommencer"

[connection signal="area_entered" from="checkPoint1/checkpoint1" to="." method="_on_checkpoint_area_entered"]
[connection signal="area_exited" from="checkPoint1/checkpoint1" to="." method="_on_checkpoint_area_exited"]
[connection signal="area_entered" from="checkPoint2/checkpoint2" to="." method="_on_checkpoint_area_entered"]
[connection signal="area_exited" from="checkPoint2/checkpoint2" to="." method="_on_checkpoint_area_exited"]
[connection signal="area_entered" from="checkPoint3/checkpointFinal" to="." method="_on_checkpoint_area_entered"]
[connection signal="area_exited" from="checkPoint3/checkpointFinal" to="." method="_on_checkpoint_area_exited"]
[connection signal="pressed" from="resetButton" to="." method="_on_reset_button_pressed"]
